Fix blockquote spacing

--- a/media/css/cms/flare26-article.css
+++ b/media/css/cms/flare26-article.css
@@ -40,6 +40,10 @@
     font-size: var(--fl-theme-label-xs);
 }
 
+.fl-article-body .fl-rich-text blockquote {
+    margin-block: var(--token-layout-md);
+}
+
 @media (--viewport-sm-up) {
     .fl-article-page .fl-main {
         padding-block-start: var(--token-layout-lg);
